# ssci-replication

./: .gitignore  README.md  requirements.txt
replication-laos-fx-oil-macro/analysis/: pyproject.toml
replication-laos-fx-oil-macro/analysis/notebooks/: 00_project_hub.ipynb  01_data_overview_and_transformations.ipynb  02_baseline_results.ipynb  03_tvp_svar_and_robustness.ipynb
replication-laos-fx-oil-macro/analysis/output/data/: laos_fx_oil_macro_research_panel.csv
replication-laos-fx-oil-macro/analysis/output/models/: tvp_svar_fit_summary.csv  tvp_svar_irf_summary.csv
replication-laos-fx-oil-macro/analysis/output/paper_tables/: table_1_descriptive_stats.csv  table_1_descriptive_stats.md  table_2_break_diagnostics.csv  table_2_break_diagnostics.md  table_3_fx_pass_through_lp.csv  table_3_fx_pass_through_lp.md  table_4_robustness.csv  table_4_robustness.md  table_5_tvp_svar_scenarios.csv  table_5_tvp_svar_scenarios.md  table_6_interaction_lp.csv  table_7_placebo_break_scan.csv
replication-laos-fx-oil-macro/analysis/output/tables/: break_diagnostics.csv  (+11 more)
replication-laos-fx-oil-macro/analysis/paper/: results_summary.md
replication-laos-fx-oil-macro/analysis/scripts/: build_submission_bundle.py  install_r_dependencies.R  make_additional_robustness.py  make_ael_additional_robustness.py  make_ael_break_figure.py  make_regime_break_figure.py  run_analysis.py  run_tvp_svar.R
replication-laos-fx-oil-macro/analysis/tests/: test_data_pipeline.py  test_models.py  test_notebook_helpers.py  test_paper_exports.py  test_research_pipeline.py  test_tvp_svar_runner.py
(+63 files in other folders)
